data/collection/fixes/descriptions/scala/scala-4509
=== What steps will reproduce the problem? ===
```scala
class No {
  val ano = new Array[Nothing](5)
  val anu = new Array[Null](5)
  val ans = new Array[String](5)
}

val no = new No
no.ano.map(_ => 42)
no.anu.map(_ => 42)
no.ans.map(_ => 42)
```



=== What is the expected behavior? ===
```scala
res0: Array[Int] = Array(42, 42, 42, 42, 42)
res1: Array[Int] = Array(42, 42, 42, 42, 42)
res2: Array[Int] = Array(42, 42, 42, 42, 42)
```

=== What do you see instead? ===
```scala
<console>:25: error: value map is not a member of Array[Nothing]
       no.ano.map(_ => 42)
              ^
res1: Array[Int] = Array(42, 42, 42, 42, 42)
res2: Array[Int] = Array(42, 42, 42, 42, 42)
```

=== What versions of the following are you using? ===
  - Scala: 2.10.0.r24736-b20110412020139 